--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -43,7 +43,6 @@ jobs:
           if git diff-index --quiet HEAD --; then
             echo "No changes to commit"
           else
-            git commit -m "Update blocklist_ads and blocklist_nsfw"
-            git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+            git commit -m "chore(build): update blocklist_ads and blocklist_nsfw"
             git push -f -u origin main
           fi
