--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -36,7 +36,6 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git init
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
@@ -44,5 +43,6 @@ jobs:
             echo "No changes to commit"
           else
             git commit -m "chore(build): update blocklist_ads and blocklist_nsfw"
+            git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
             git push -f -u origin main
           fi
